docs/templates/anubis/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anubis
  namespace: security
  labels:
    app.kubernetes.io/name: anubis
    app.kubernetes.io/managed-by: flux
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: anubis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: anubis
        app.kubernetes.io/managed-by: flux
    spec:
      runtimeClassName: youki
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      automountServiceAccountToken: false
      containers:
        - name: anubis
          # renovate: datasource=docker depName=ghcr.io/techarohq/anubis
          image: ghcr.io/techarohq/anubis:latest@sha256:4bdf6ddd1a8dc8bfe7a33d823a1cb72157885ca4fd3ee749654b21cba732e439
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 750m
              memory: 256Mi
            requests:
              cpu: 250m
              memory: 256Mi
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
